Text Object Overlays disappear when Fill Mode is set to None (regression from 2.81a) #75971

Closed
opened 2020-04-21 17:31:04 +02:00 by Thiago Sampaio · 9 comments

System Information
Operating system: MacOS Mojave 10.14.6 | Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca Most likely since the Overlay Refactor.
Worked: 2.81a

Short description of error
When I add text and then change the Fill Mode to None, the text simply disappears: no outline, nothing. Doesn't matter if it's in "solid mode", "material preview" or "render preview".

Exact steps for others to reproduce the error
Add text mesh, go to object data properties and change Fill Mode to "None", or open the .blends below in there respective versions.

Before Mode change:
Captura de ecrã 2020-04-21, às 16.25.03.png

After Mode change:
Captura de ecrã 2020-04-21, às 16.25.12.png

The text object overlay is visible in 2.81a.
2.81a_Text.jpg

2.81a_Text.blend

2.82.6_Text.blend

**System Information** Operating system: MacOS Mojave 10.14.6 | Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Most likely since the Overlay Refactor. Worked: 2.81a **Short description of error** When I add text and then change the Fill Mode to None, the text simply disappears: no outline, nothing. Doesn't matter if it's in "solid mode", "material preview" or "render preview". **Exact steps for others to reproduce the error** Add text mesh, go to object data properties and change Fill Mode to "None", or open the .blends below in there respective versions. Before Mode change: ![Captura de ecrã 2020-04-21, às 16.25.03.png](https://archive.blender.org/developer/F8487568/Captura_de_ecra__2020-04-21__a_s_16.25.03.png) After Mode change: ![Captura de ecrã 2020-04-21, às 16.25.12.png](https://archive.blender.org/developer/F8487575/Captura_de_ecra__2020-04-21__a_s_16.25.12.png) The text object overlay is visible in 2.81a. ![2.81a_Text.jpg](https://archive.blender.org/developer/F8488603/2.81a_Text.jpg) [2.81a_Text.blend](https://archive.blender.org/developer/F8488605/2.81a_Text.blend) [2.82.6_Text.blend](https://archive.blender.org/developer/F8488607/2.82.6_Text.blend)
Author

Added subscriber: @thsampa

Added subscriber: @thsampa
Thiago Sampaio changed title from Text disappears when Fill Mode is set to None to Text disappears when Fill Mode is set to None [v2.82a] 2020-04-21 17:32:24 +02:00
Member

Added subscribers: @fclem, @JacquesLucke, @EAW

Added subscribers: @fclem, @JacquesLucke, @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. Earliest 2.82 buildbot I have is 763f117c48. The text is invisible there.
2.82.6_Text.blend

The text object is visible in 2.81a.
2.81a_Text.jpg

2.81a_Text.blend

The files where @JacquesLucke corrected this issue in 2.80 alpha (be98fcc6e2) were removed as part of the Overlay Refactor 9516921c05 by @fclem. I am not sure where this part of the code should have been moved to, so I'll leave that part in more capable hands.


Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51

I can confirm. Earliest 2.82 buildbot I have is 763f117c48. The text is invisible there. [2.82.6_Text.blend](https://archive.blender.org/developer/F8488607/2.82.6_Text.blend) The text object is visible in 2.81a. ![2.81a_Text.jpg](https://archive.blender.org/developer/F8488603/2.81a_Text.jpg) [2.81a_Text.blend](https://archive.blender.org/developer/F8488605/2.81a_Text.blend) The files where @JacquesLucke corrected this issue in 2.80 alpha (be98fcc6e2) were removed as part of the Overlay Refactor 9516921c05 by @fclem. I am not sure where this part of the code should have been moved to, so I'll leave that part in more capable hands. --- Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51
Evan Wilson changed title from Text disappears when Fill Mode is set to None [v2.82a] to Text Object Overlays disappear when Fill Mode is set to None (regression from 2.81a) 2020-04-22 07:23:51 +02:00

This issue was referenced by 3542c5eb72

This issue was referenced by 3542c5eb721348774044822c0cf8ca5083644edd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-22 11:47:20 +02:00
Author

I'm confused. Closed, Resolved?

What should I do know?

I'm confused. Closed, Resolved? What should I do know?
Member

This has been fixed in 2.83 release and 2.90 master. Once those builds are updated later today/tomorrow morning (depending on where you live), you can download them from the link below:

https://builder.blender.org/download/

This has been fixed in 2.83 release and 2.90 master. Once those builds are updated later today/tomorrow morning (depending on where you live), you can download them from the link below: https://builder.blender.org/download/
Author

In #75971#915710, @EAW wrote:
This has been fixed in 2.83 release and 2.90 master. Once those builds are updated later today/tomorrow morning (depending on where you live), you can download them from the link below:

https://builder.blender.org/download/

What are the differences between the version in the downloads section of the main page and the builder's page stability wise?

> In #75971#915710, @EAW wrote: > This has been fixed in 2.83 release and 2.90 master. Once those builds are updated later today/tomorrow morning (depending on where you live), you can download them from the link below: > > https://builder.blender.org/download/ What are the differences between the version in the downloads section of the main page and the builder's page stability wise?
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75971
No description provided.