Fix T75971: 3D Text invisible when fill set to None